# NHL_PYTHON

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  bets_log.csv  evaluate_betting.py  extract.py  extract_games.py  model_pipeline.py  nhl_games_all_seasons.csv  nhl_model.cbm  nhl_team_stats_last_10_seasons.csv  predict.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
player_goalies_stats/: nhl_20252026_goalies_stats.csv
player_individual_stats/: nhl_20252026_individual_stats.csv
team/: nhl_20212022.csv  nhl_20222023.csv  nhl_20232024.csv  nhl_20242025.csv  nhl_20252026.csv
team_stats/: nhl_20212022_stats.csv  nhl_20222023_stats.csv  nhl_20232024_stats.csv  nhl_20242025_stats.csv  nhl_20252026_stats.csv
team_stats_game/: nhl_20212022_stats_game.csv  nhl_20222023_stats_game.csv  nhl_20232024_stats_game.csv  nhl_20242025_stats_game.csv  nhl_20252026_stats_game.csv
