[project]
name = "nhl-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
